update new auth details view

--- a/secure-ios-app/Base.lproj/Main.storyboard
+++ b/secure-ios-app/Base.lproj/Main.storyboard
@@ -182,6 +182,57 @@
             </objects>
             <point key="canvasLocation" x="2008.6956521739132" y="218.47826086956525"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="UMd-LZ-fWp">
+            <objects>
+                <viewController id="OWc-q8-PoD" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="L9P-Sh-4fE">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fUv-ym-c9I">
+                                <rect key="frame" x="0.0" y="20" width="414" height="716"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="p16-vx-Wsg">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="p16-vx-Wsg" id="f6v-Lg-hzU">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.666666666666664"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kcP-UG-i4S">
+                                                    <rect key="frame" x="35" y="11" width="344" height="22"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="kcP-UG-i4S" firstAttribute="top" secondItem="f6v-Lg-hzU" secondAttribute="topMargin" id="CVR-8d-Uhw"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="kcP-UG-i4S" secondAttribute="bottom" id="K6Y-Og-t9j"/>
+                                                <constraint firstItem="kcP-UG-i4S" firstAttribute="leading" secondItem="f6v-Lg-hzU" secondAttribute="leadingMargin" constant="20" id="k8z-P9-N9L"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="kcP-UG-i4S" secondAttribute="trailing" constant="20" id="xWn-AN-E8r"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="fUv-ym-c9I" firstAttribute="leading" secondItem="C2d-pe-5ad" secondAttribute="leading" id="EhR-Nd-a2L"/>
+                            <constraint firstItem="fUv-ym-c9I" firstAttribute="top" secondItem="C2d-pe-5ad" secondAttribute="top" id="TtJ-c9-FY3"/>
+                            <constraint firstItem="C2d-pe-5ad" firstAttribute="trailing" secondItem="fUv-ym-c9I" secondAttribute="trailing" id="bz5-MY-EAK"/>
+                            <constraint firstItem="C2d-pe-5ad" firstAttribute="bottom" secondItem="fUv-ym-c9I" secondAttribute="bottom" id="lyW-YC-2ZA"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="C2d-pe-5ad"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TWS-gM-bNr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2953.6231884057975" y="213.58695652173915"/>
+        </scene>
         <!--Home View Controller-->
         <scene sceneID="ku8-pY-PYa">
             <objects>
