--- a/secure-ios-app/Base.lproj/Main.storyboard
+++ b/secure-ios-app/Base.lproj/Main.storyboard
@@ -182,10 +182,10 @@
             </objects>
             <point key="canvasLocation" x="2008.6956521739132" y="218.47826086956525"/>
         </scene>
-        <!--View Controller-->
+        <!--Authentication Details View Controller-->
         <scene sceneID="UMd-LZ-fWp">
             <objects>
-                <viewController id="OWc-q8-PoD" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AuthenticationDetailsViewController" id="OWc-q8-PoD" customClass="AuthenticationDetailsViewController" customModule="secure_ios_app" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="L9P-Sh-4fE">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -194,25 +194,63 @@
                                 <rect key="frame" x="0.0" y="20" width="414" height="716"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="p16-vx-Wsg">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="userInfoCell" id="p16-vx-Wsg">
                                         <rect key="frame" x="0.0" y="28" width="414" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="p16-vx-Wsg" id="f6v-Lg-hzU">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.666666666666664"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kcP-UG-i4S">
-                                                    <rect key="frame" x="35" y="11" width="344" height="22"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PNy-4f-6ky">
+                                                    <rect key="frame" x="23" y="1.6666666666666679" width="80" height="40"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="40" id="Vqh-iM-jMV"/>
+                                                        <constraint firstAttribute="width" constant="80" id="s9I-Qg-9ht"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ItE-G2-sjo">
+                                                    <rect key="frame" x="111" y="1.6666666666666679" width="280" height="40"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="40" id="YEz-QY-zBv"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="kcP-UG-i4S" firstAttribute="top" secondItem="f6v-Lg-hzU" secondAttribute="topMargin" id="CVR-8d-Uhw"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="kcP-UG-i4S" secondAttribute="bottom" id="K6Y-Og-t9j"/>
-                                                <constraint firstItem="kcP-UG-i4S" firstAttribute="leading" secondItem="f6v-Lg-hzU" secondAttribute="leadingMargin" constant="20" id="k8z-P9-N9L"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="kcP-UG-i4S" secondAttribute="trailing" constant="20" id="xWn-AN-E8r"/>
+                                                <constraint firstItem="ItE-G2-sjo" firstAttribute="leading" secondItem="PNy-4f-6ky" secondAttribute="trailing" constant="8" id="ReQ-90-Wjs"/>
+                                                <constraint firstItem="PNy-4f-6ky" firstAttribute="leading" secondItem="f6v-Lg-hzU" secondAttribute="leadingMargin" constant="8" id="WNY-IR-KmI"/>
+                                                <constraint firstItem="PNy-4f-6ky" firstAttribute="centerY" secondItem="f6v-Lg-hzU" secondAttribute="centerY" id="Wdq-Cx-Ncn"/>
+                                                <constraint firstItem="ItE-G2-sjo" firstAttribute="centerY" secondItem="f6v-Lg-hzU" secondAttribute="centerY" id="XJ5-3z-tdg"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="ItE-G2-sjo" secondAttribute="trailing" constant="8" id="xmg-s8-2Wr"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="roleNameCell" id="nhF-EB-7bY">
+                                        <rect key="frame" x="0.0" y="72" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="nhF-EB-7bY" id="aUY-Tr-aue">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.666666666666664"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fWc-hj-a84">
+                                                    <rect key="frame" x="23" y="2" width="368" height="40"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="40" id="uJS-qp-NpI"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="fWc-hj-a84" firstAttribute="centerY" secondItem="aUY-Tr-aue" secondAttribute="centerY" id="Bib-C6-rpd"/>
+                                                <constraint firstItem="fWc-hj-a84" firstAttribute="leading" secondItem="aUY-Tr-aue" secondAttribute="leadingMargin" constant="8" id="FEm-3j-aff"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="fWc-hj-a84" secondAttribute="trailing" constant="8" id="bHk-pO-3jH"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -228,6 +266,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="C2d-pe-5ad"/>
                     </view>
+                    <connections>
+                        <outlet property="userInfoView" destination="fUv-ym-c9I" id="xpf-lV-F7v"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TWS-gM-bNr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
